--- a/ansible/tasks/nginx/templates/nginx_site.conf
+++ b/ansible/tasks/nginx/templates/nginx_site.conf
@@ -2,8 +2,8 @@ server {
     listen       80;
     server_name  localhost;
     
-    access_log {{ webapps_dir }}/{{ app_name }}/log/nginx-access.log;
-    error_log {{ webapps_dir }}/{{ app_name }}/log/nginx-error.log;
+	access_log /var/log/nginx/{{ app_name }}-access.log;
+	error_log /var/log/nginx/{{ app_name }}-error.log;
     
     location / {
         include uwsgi_params;
