--- a/api.ini
+++ b/api.ini
@@ -26,5 +26,5 @@ die-on-term = true
 
 autostart = true
 autorestart = true
-stderr_logfile = /vagrant/api/log/wsgi_err.log
-stdout_logfile = /vagrant/api/log/wsgi_out.log
+#stderr_logfile = /var/log/uwsgi/api_wsgi_err.log
+#stdout_logfile = /var/log/uwsgi/api_wsgi_out.log
