--- a/ansible/tasks/python/tasks.yml
+++ b/ansible/tasks/python/tasks.yml
@@ -4,6 +4,7 @@
 - name: install common packages needed for python application development
   action: apt pkg={{item}} state=installed
   with_items:
+    - libpq-dev
     - python3
     - python3-pip
     - python3-setuptools
