--- a/ansible/tasks/nginx/templates/nginx_site.conf
+++ b/ansible/tasks/nginx/templates/nginx_site.conf
@@ -2,11 +2,17 @@ server {
     listen       80;
     server_name  localhost;
     
-	access_log /var/log/nginx/{{ app_name }}-access.log;
-	error_log /var/log/nginx/{{ app_name }}-error.log;
-    
+    access_log /var/log/nginx/{{ app_name }}-access.log;
+    error_log /var/log/nginx/{{ app_name }}-error.log;
+
     location / {
         include uwsgi_params;
         uwsgi_pass unix:/tmp/{{ app_name }}.sock;
+    }
+
+    location ^~ /docs  {
+       autoindex on;
+       include  /etc/nginx/mime.types;
+       root /vagrant;
     }
 }
