updated vagrant ansible tasks
- on "vagrant ssh", chdir to /vagrant directory
- added alias for "python3 manage.py" as "flask"
- added POSTMAN collection
- updated API tests

--- a/ansible/tasks/util/tasks.yml
+++ b/ansible/tasks/util/tasks.yml
@@ -14,3 +14,9 @@
   with_items:
     - htop
     - tree
+
+- name: add aliases to .bashrc
+  action: lineinfile dest=/home/vagrant/.bashrc line="{{ item }}"
+  with_items:
+    - 'cd /vagrant'
+    - 'alias flask="python3 /vagrant/manage.py"'
